@@ -22,8 +22,8 @@
 
 using namespace Kross::Api;
 
-Dict::Dict(const QMap<QString, Object::Ptr> value, const QString& name)
-    : Value< List, QMap<QString, Object::Ptr> >(value, name)
+Dict::Dict(const QMap<QString, Object::Ptr> value)
+    : Value< List, QMap<QString, Object::Ptr> >(value)
 {
 }
 
